[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://resources/ship_123.png" type="Texture" id=2]
[ext_resource path="res://resources/scorch_02.png" type="Texture" id=3]
[ext_resource path="res://resources/light.png" type="Texture" id=4]
[ext_resource path="res://resources/RubikMonoOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/shield.png" type="Texture" id=6]
[ext_resource path="res://scripts/camera.gd" type="Script" id=7]
[ext_resource path="res://resources/ship_parts.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=17]
radius = 20.8806

[sub_resource type="CanvasItemMaterial" id=16]
blend_mode = 1

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0, 0.451613, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.987391, 0.458065, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.490323, 0.993548 )
colors = PoolColorArray( 1, 0.929858, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 23 )

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( -1, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.2
scale_curve = SubResource( 22 )
color_ramp = SubResource( 2 )
color_initial_ramp = SubResource( 25 )

[sub_resource type="CanvasItemMaterial" id=19]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.180645, 0.419355, 0.606452, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.0129032, 0.658065, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.718182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 1.0
angular_velocity = 550.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -50.0
scale = 0.2
scale_random = 0.1
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )
color_initial_ramp = SubResource( 15 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 5 )

[node name="Player" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="CollisionBox" type="Area2D" parent="."]
collision_mask = 54

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="CollisionBox"]
rotation = 1.5708
shape = SubResource( 17 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 500, -50 )
current = true
script = ExtResource( 7 )

[node name="Exhaust" type="Particles2D" parent="."]
material = SubResource( 16 )
position = Vector2( -32, 0 )
emitting = false
amount = 64
lifetime = 0.5
visibility_rect = Rect2( -399.967, -1.26025e-07, 399.895, 1.26025e-07 )
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Explosion" type="Particles2D" parent="."]
material = SubResource( 19 )
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -185.844, -208.288, 396.205, 408.293 )
process_material = SubResource( 10 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.9, 0.7 )
texture = ExtResource( 2 )

[node name="ShieldSprite" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.654902, 0.960784, 0.952941, 0.27451 )
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.15

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -1, 0 )
enabled = false
texture = ExtResource( 4 )
texture_scale = 4.0

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="PowerupTimer2" type="Timer" parent="."]
wait_time = 10.0

[node name="Position2D" type="Position2D" parent="."]

[node name="PowerupLabel" type="Label" parent="Position2D"]
modulate = Color( 1, 0.984314, 0, 1 )
margin_left = -148.0
margin_top = -72.0
margin_right = 149.0
margin_bottom = -29.0
custom_fonts/font = SubResource( 18 )
align = 1
valign = 2

[connection signal="area_entered" from="CollisionBox" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
[connection signal="timeout" from="PowerupTimer2" to="." method="_on_PowerupTimer2_timeout"]
